--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <main>
                     <div class="main__video">
                         <div class="main__video-container">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/_1lj6JaDKCA" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <video width="100%" height="100%" controls>
+                                <source src="images/steph-curry.mp4" type="video/mp4">
+                            </video>  
                         </div>
                         <div class="main__description">
                             <p>Steph Curry & DeMarcus Postgame Interview - Game 2 | Warriors vs Raptos | 2019 NBA Finals</p>
